<resources>
    <string name="app_name">Todo List</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Titulo</string>
    <string name="label_description">Descrição</string>
    <string name="label_date">Data</string>
    <string name="label_time">Hora</string>
    <string name="cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="fab_label_description_new_task">Nova tarefa</string>
    <string name="label_menu_edit">Editar</string>
    <string name="label_menu_delete">Apagar</string>
    <string name="label_you_dont_have_tasks">Ops! Você não possui\nnenhum tarefa</string>
</resources>